apps/base/media/transmission/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
spec:
  serviceName: transmission
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: artifactory.local.hejsan.xyz/docker/linuxserver/transmission:4.0.6@sha256:2d8d07715382a58f83fdcd1751e08c736711d76eecf71135106312fd370af933
          ports:
            - containerPort: 9091
              name: http
          volumeMounts:
            - name: transmission-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
          resources:
            limits:
              memory: 400Mi
              cpu: "0.3"
            requests:
              memory: 100Mi
              cpu: "0.1"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: transmission-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 1Gi
