apps/base/media/transmission/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: LoadBalancer
  loadBalancerIP: ${TRANSMISSION_PEER_IP}
  selector:
    app: transmission
  ports:
    - name: http
      targetPort: 9091
      port: 9091
    - name: peer-tcp
      targetPort: 51413
      port: 51413
      protocol: TCP
    - name: peer-udp
      targetPort: 51413
      port: 51413
      protocol: UDP
