apps/base/media/transmission/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`transmission.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: transmission
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
